--- a/MyCOPilotX/Resources/layout/Main.axml
+++ b/MyCOPilotX/Resources/layout/Main.axml
@@ -13,4 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button1" />
+    <ImageView
+        android:src="@drawable/splashscreen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView1" />
 </LinearLayout>
